<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mattrencher.sfsfx.MainActivity"
    android:background="@drawable/ssf2_group">

    <Button
    android:text="@string/japan"
    android:id="@+id/btn1"
    android:soundEffectsEnabled="false"
    android:layout_width="125dp"
    android:layout_height="80dp"
    android:layout_marginTop="33dp"
    android:visibility="visible"
    android:background="@android:drawable/btn_default_small"
    android:alpha="0.70"
    android:layout_marginLeft="27dp"
    android:layout_marginStart="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/ussr"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:id="@+id/btn2"
        android:soundEffectsEnabled="false"
        android:background="@android:drawable/btn_default_small"
        android:alpha="0.70"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_above="@+id/btn3"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1" />

    <Button
        android:text="@string/china"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:id="@+id/btn3"
        android:soundEffectsEnabled="false"
        android:layout_below="@+id/btn1"
        android:layout_alignLeft="@+id/btn1"
        android:layout_alignStart="@+id/btn1"
        android:background="@android:drawable/btn_default_small"
        android:alpha="0.70"/>

    <Button
        android:text="@string/thailand"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:id="@+id/btn4"
        android:soundEffectsEnabled="false"
        android:layout_alignTop="@+id/btn3"
        android:layout_alignLeft="@+id/btn2"
        android:layout_alignStart="@+id/btn2"
        android:background="@android:drawable/btn_default_small"
        android:alpha="0.70"/>

    <Button
        android:text="@string/india"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:id="@+id/btn5"
        android:soundEffectsEnabled="false"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btn3"
        android:layout_alignLeft="@+id/btn3"
        android:layout_alignStart="@+id/btn3"
        android:background="@android:drawable/btn_default_small"
        android:alpha="0.70"/>

    <Button
        android:text="@string/spain"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:id="@+id/btn6"
        android:soundEffectsEnabled="false"
        android:layout_above="@+id/btn7"
        android:layout_alignLeft="@+id/btn4"
        android:layout_alignStart="@+id/btn4"
        android:background="@android:drawable/btn_default_small"
        android:alpha="0.70"/>

    <Button
        android:text="@string/usa"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:id="@+id/btn7"
        android:soundEffectsEnabled="false"
        android:layout_below="@+id/btn5"
        android:layout_alignLeft="@+id/btn5"
        android:layout_alignStart="@+id/btn5"
        android:layout_marginTop="14dp"
        android:background="@android:drawable/btn_default_small"
        android:alpha="0.70"/>

    <Button
        android:text="@string/brazil"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:id="@+id/btn8"
        android:soundEffectsEnabled="false"
        android:layout_alignBottom="@+id/btn7"
        android:layout_alignLeft="@+id/btn6"
        android:layout_alignStart="@+id/btn6"
        android:background="@android:drawable/btn_default_small"
        android:alpha="0.70"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu3"
        android:text="@+id/menu3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:alpha="0.70"/>

    <Button
        android:text="@string/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.70"/>

    <Button
        android:text="@string/announcer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.70"/>

</RelativeLayout>
